# QSOT-Harness

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  run_experiment.py
.github/workflows/: ci.yml  governance.yml  paper.yml
configs/: experiment.yaml
docs/theory/: claim_boundary.md  temporal_state_principle.md  v1_to_v2_1_migration.md
paper/: main.tex  references.bib
paper/evidence/: PROVENANCE.md  report.md  result.json
paper/sections/: 00_theory_intent.tex  01_background.tex  02_phases_1_3.tex  03_phases_4_5.tex  04_phase_6.tex  05_scientific_audit.tex  06_limits.tex  07_reproducibility.tex  08_acknowledgements.tex
reports/: report.md  result.json
scripts/: governance_check.py
src/qsot_v2/: __init__.py
src/qsot_v2/cli/: __init__.py  run_experiment.py
src/qsot_v2/core/: __init__.py  calibration.py  checks.py  config.py  evidence.py  phase_context.py  results.py  runner.py
src/qsot_v2/core/phases/: __init__.py  phase0.py  phase1.py  phase2.py  phase3.py  phase4.py  phase5.py  phase6.py  phase7.py
src/qsot_v2/physics/: __init__.py  accessibility.py  background.py  beta_residual.py  channels.py  classification.py  memory_kernel.py  optimizer.py  quantum.py  scientific_audit.py
src/qsot_v2/reports/: __init__.py  renderer.py
src/qsot_v2/reports/templates/: experiment_report.md.j2
src/qsot_v2/theory/: __init__.py  axioms.py  claim_boundary.py  falsification.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_accessibility.py  test_calibration.py  test_claim_boundary.py  test_config.py  test_evidence.py  test_memory_kernel.py  test_optimizer.py  test_physics.py  test_renderer.py  test_results.py  test_runner.py  test_scientific_audit.py  test_temporal_axioms.py
