[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qsot-harness"
version = "2.1.0"
authors = [
  { name="Flamehaven-Labs", email="contact@flamehaven.org" },
]
description = "Bounded, epistemically-labeled verification harness for quantum-channel models of curved spacetime"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "ruff>=0.4.0",
    "black==26.5.1",
    "mypy>=1.3.0",
]
report = [
    # PDF generation via pandoc subprocess (pandoc must be installed separately)
    # weasyprint is an alternative: pip install weasyprint
]
audit = [
    # External scientific-review backend (PyPI: spar-framework). Classified
    # ADVISORY-HEURISTIC: a transparency/review signal, not external validation.
    # When absent, Phase 7 falls back to the local deterministic mock and the
    # result records backend_mode = "mock". The flame_torch DQE governance engine
    # is intentionally NOT declared here (externally provisioned, optional).
    "spar-framework>=0.6.0",
]

[project.scripts]
qsot-run = "qsot_v2.cli.run_experiment:main"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.black]
line-length = 99
target-version = ["py310"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501", "SIM108", "SIM110"]  # preserve mathematical formatting

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

# ---------------------------------------------------------------------------
# pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=qsot_v2",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
    "-v",
]

[tool.coverage.run]
source = ["qsot_v2"]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "src/qsot_v2/rust_sidecar/*",
]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
